# fs-tasks

./: .gitignore  README.md
task1/FUSEHello/: CMakeCache.txt  CMakeLists.txt  FUSEHello  FUSEHello.cbp  Makefile  cmake_install.cmake  main.c
task1/FUSEHello/CMakeModules/: FindFUSE.cmake
task1/hideArg/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hideArg  hideArg.cbp  main.c
task1/myLsof/: go.mod  myLsof  myLsof.go
task1/myPd/: go.mod  myPd  myPd.go
task2/my-copy/: Makefile  file_sizes.txt  main.c  measure_copy.py  my_copy  results.csv
task2/my-copy/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
task3/: go.mod  main.go
task3/ext2/: consts.go  ext2.go  files.go  inode.go  superblock.go  util.go
